--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,16 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive" />
+    <img
+      [src]="recipeWhichWeSelect.imagePath"
+      alt="{{ recipeWhichWeSelect.name }}"
+      class="img-responsive"
+      style="width: 700px; height: 500px"
+    />
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe name</h1>
+    <h1>{{ recipeWhichWeSelect.name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -24,7 +29,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">Description</div>
+  <div class="col-xs-12">{{ recipeWhichWeSelect.description }}</div>
 </div>
 <div class="row">
   <div class="col-xs-12">Ingredients</div>
