--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,6 @@
-<a href="#" class="list-group-item clearfix">
+<!-- we want to inform our parent component whenever this event is clicked and the recipe is selected
+so implement onSelected here -->
+<a href="#" class="list-group-item clearfix" (click)="onSelected()">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ singleRecipe.name }}</h4>
     <p class="list-group-item-text">{{ singleRecipe.description }}</p>
