--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,9 @@
         <li>
           <a href="#" (click)="onSelect('shopping-list')">Shopping List</a>
         </li> -->
-        <li><a routerLink="/recipes">Recipes</a></li>
-        <li>
+        <!-- routerLinkActive="active" is used to dynamically add currently active route -->
+        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active">
           <a routerLink="/shopping-list">Shopping List</a>
         </li>
       </ul>
