--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,10 @@
 <!-- we want to inform our parent component whenever this event is clicked and the recipe is selected
 so implement onSelected here -->
-<a style="cursor: pointer" class="list-group-item clearfix">
+<a
+  style="cursor: pointer"
+  [routerLink]="[index]"
+  class="list-group-item clearfix"
+>
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ singleRecipe.name }}</h4>
     <p class="list-group-item-text">{{ singleRecipe.description }}</p>
