--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -3,6 +3,7 @@ so implement onSelected here -->
 <a
   style="cursor: pointer"
   [routerLink]="[index]"
+  routerLinkActive="active"
   class="list-group-item clearfix"
 >
   <div class="pull-left">
