--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -6,7 +6,8 @@
       <a
         class="list-group-item"
         style="cursor: pointer"
-        *ngFor="let OneIngredient of ingredients"
+        *ngFor="let OneIngredient of ingredients; let i = index"
+        (click)="onEditItem(i)"
         >{{ OneIngredient.name }} ({{ OneIngredient.amount }})</a
       >
     </ul>
